--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -1,6 +1,6 @@
-@import '../icons/style.scss';
+@import "../icons/style.scss";
 :root {
    --primary-black: #1a1a1a;
-   --primary-white : #ffffff;
-   --light-grey : #e6e6e6;
+   --primary-white: #ffffff;
+   --light-grey: #e6e6e6;
 }
