--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -1,11 +1,12 @@
 .movies {
     color: var(--primary-white);
-    background: var(--primary-black);
     font-family: "Reem Kufi", sans-serif;
-    min-height: 100vh;
     padding: 20px;
     &__list {
         display: flex;
         flex-wrap: wrap;
     }
+}
+body {
+    background: var(--primary-black);
 }
