form add movie added + autocomplete first step init

--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -2,5 +2,8 @@
 :root {
    --primary-black: #1a1a1a;
    --primary-white: #ffffff;
-   --light-grey: #e6e6e6;
+   --light-grey: #e6e6e6;  
+   --grey : rgb(150, 150, 150);
+   --t-rk: "Reem Kufi", sans-serif;
+   --t-montserrat:"Montserrat", sans-serif;
 }
