edit mode page added + style home page uupgrade

--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -6,4 +6,7 @@
    --grey : rgb(150, 150, 150);
    --t-rk: "Reem Kufi", sans-serif;
    --t-montserrat:"Montserrat", sans-serif;
+     --background-gradient: linear-gradient(30deg, #f39c12 30%, #f1c40f);
+    --gray: #34495e;
+    --darkgray: #2c3e50;
 }
