--- a/src/components/SingleMovie/SingleMovie.scss
+++ b/src/components/SingleMovie/SingleMovie.scss
@@ -1,3 +1,7 @@
+a {
+    color: var(--primary-white);
+    text-decoration: none;
+}
 .singlemovie {
     margin: 20px 0;
     width: 100%;
@@ -5,6 +9,12 @@
     align-items: center;
     height: 140px;
     position: relative;
+    text-decoration: none;
+    transition: transform cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+    &:hover {
+        transition: transform cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+        transform: scale(1.01);
+    }
     &__actions {
         position: absolute;
         width: fit-content;
@@ -17,6 +27,11 @@
             outline: none;
             font-size: 16px;
             color: var(--light-grey);
+            transition: color cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+            &:hover {
+                color: var(--gray);
+                transition: color cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
+            }
         }
     }
     &__poster {
