--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -1,12 +1,132 @@
-.movies {
-    color: var(--primary-white);
-    font-family: "Reem Kufi", sans-serif;
-    padding: 20px;
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
+.home {
+    .movie-banner {
+        position: relative;
+        min-height: 400px;
+        .bg {
+            position: absolute;
+            inset: 0;
+        }
+        img {
+            width:100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .title {
+            position: absolute;
+            top: 30%;
+            left: 20px;
+            right: 0;
+            font-size: 60px;
+            font-family: var(--t-rk);
+        }
+        &:after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(transparent, var(--primary-black));
+            display: block;
+            position: absolute;
+            inset: 0;
+        }
+        .filters {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 10000;
+            right: 0;
+            display: flex;
+            gap: 15px;
+            justify-content: center;
+            padding: 20px;
+            transform: translateY(50%);
+
+            &__block {
+                padding: 20px 0;
+                display: flex;
+                flex-direction: column;
+                width: min-content;
+                font-family: var(--t-montserrat);
+                label {
+                    font-size: 16px;
+                    margin: 5px 0;
+                    width: fit-content;
+                }
+                .input {
+                    padding: 0 1em;
+                    max-width: 500px;
+                    min-width: 180px;
+                    width: 100%;
+                    height: 40px;
+                    background-color: transparent;
+                    border: white solid 1px;
+                    color: #fff;
+                    outline: 0;
+                    box-shadow: none;
+                    border-radius: 0.25em;
+                }
+            }
+        }
+    }
+    .movies {
+        color: var(--primary-white);
+        font-family: "Reem Kufi", sans-serif;
+        padding: 50px 20px;
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+        }
     }
 }
+
 body {
-    background: var(--primary-black);
+    background: var(--grey);
 }
+select {
+    /* Reset Select */
+    appearance: none;
+    outline: 0;
+    box-shadow: none;
+    /* Personalize */
+    flex: 1;
+    padding: 0 1em;
+    color: #fff;
+    background: var(--primary-black);
+    border: 2px solid var(--darkgray);
+    background-image: none;
+    cursor: pointer;
+}
+
+
+select:focus {
+   outline: 0;
+   
+}
+/* Remove IE arrow */
+select::-ms-expand {
+    display: none;
+}
+/* Custom Select wrapper */
+.select {
+    position: relative;
+    display: flex;
+    max-width: 500px;
+    min-width: 180px;
+    width: 60%;
+    height: 40px;
+    border-radius: 0.25em;
+    overflow: hidden;
+}
+/* Arrow */
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    top: 0;
+    right: 0;
+    line-height: 0.8;
+    padding: 1em;
+    background-color: #34495e;
+    transition: 0.25s all ease;
+    pointer-events: none;
+}
+/* Transition */
+
