--- a/src/pages/AddMovie/AddMovie.scss
+++ b/src/pages/AddMovie/AddMovie.scss
@@ -1,5 +1,73 @@
 .add {
-    padding: 20px;
+    .wrapper {
+        display: flex;
+    }
+    .categories {
+        color: rgb(150, 150, 150);
+        text-transform: capitalize;
+        line-height: 2;
+    }
+    .ou {
+        font-family: var(--t-rk);
+        color: var(--light-grey);
+        font-size: 60px;
+        line-height: 3;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    .tmdb {
+        font-size: 24px;
+        text-align: center;
+        font-family: var(--t-rk);
+        color: var(--light-grey);
+        padding: 20px;
+        line-height: 3;
+    }
+    .movie-banner {
+        position: relative;
+        min-height: 500px;
+        .bg {
+            position: absolute;
+            inset: 0;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .title {
+            position: absolute;
+            top: 30%;
+            left: 20px;
+            right: 0;
+            font-size: 60px;
+            z-index: 9999;
+            font-family: var(--t-rk);
+        }
+        &:after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(transparent, var(--primary-black));
+            display: block;
+            position: absolute;
+            inset: 0;
+        }
+        .input {
+            padding: 0 1em;
+            max-width: 500px;
+            min-width: 180px;
+            width: 100%;
+            height: 40px;
+            background-color: transparent;
+            border: white solid 1px;
+            color: #fff;
+            outline: 0;
+            box-shadow: none;
+            border-radius: 0.25em;
+        }
+    }
+
     .similar-movies {
         scrollbar-width: none; /* For Firefox */
         -ms-overflow-style: none; /* For Internet Explorer and Edge */
@@ -13,18 +81,21 @@
         .film {
             min-width: 100px;
         }
-        }
+    }
     .search {
         position: relative;
         padding: 0;
+
         .text {
             &.active {
                 border-bottom: none;
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
             }
         }
         .result {
             &.active {
-                border: rgb(255, 251, 0) 1px solid;
+                border: white 1px solid;
                 border-top: none;
                 p {
                     padding: 5px 10px;
@@ -32,7 +103,7 @@
                     font-size: 14px;
                     transition: all cubic-bezier(0.39, 0.575, 0.565, 1) 0.3s;
                     &:hover {
-                        color : var(--grey);
+                        color: var(--grey);
                         transition: all cubic-bezier(0.39, 0.575, 0.565, 1) 0.3s;
                     }
                 }
@@ -107,6 +178,8 @@
             display: flex;
             flex-direction: column;
             font-family: var(--t-montserrat);
+            display: flex;
+            align-items: center;
             input.text {
                 height: 40px;
             }
@@ -119,20 +192,24 @@
                 border: 1px double var(--grey);
                 width: fit-content;
             }
-            input[type="text"],input[type="url"],
+            input[type="text"],
+            input[type="url"],
             textarea {
-                font-size: 14px;
-                color: var(--grey);
-                outline: none;
-                background: transparent;
-                padding: 10px;
-                border: 1px double rgb(255, 251, 0);
+                padding: 0 1em;
                 max-width: 500px;
-                min-width: 280px;
-                width: 60%;
+                min-width: 180px;
+                width: 100%;
+                height: 40px;
+                background-color: transparent;
+                border: white solid 1px;
+                color: #fff;
+                outline: 0;
+                box-shadow: none;
+                border-radius: 0.25em;
             }
             textarea {
                 resize: none;
+                height: 200px;
             }
         }
         &__label {
