--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -7,7 +7,7 @@
             inset: 0;
         }
         img {
-            width:100%;
+            width: 100%;
             height: 100%;
             object-fit: cover;
         }
@@ -91,20 +91,27 @@ select {
     padding: 0 1em;
     color: #fff;
     background: var(--primary-black);
-    border: 2px solid var(--darkgray);
+    border: 1px solid white;
     background-image: none;
     cursor: pointer;
+    option {
+        &:hover {
+            background-color: var(--grey);
+        }
+    }
+}
+select:focus > option:checked { 
+    background: var(--grey) !important;
 }
 
-
 select:focus {
-   outline: 0;
-   
+    outline: 0;
 }
 /* Remove IE arrow */
 select::-ms-expand {
     display: none;
 }
+
 /* Custom Select wrapper */
 .select {
     position: relative;
@@ -124,9 +131,9 @@ select::-ms-expand {
     right: 0;
     line-height: 0.8;
     padding: 1em;
-    background-color: #34495e;
+    background-color: transparent;
+    border-left: 1px solid white;
     transition: 0.25s all ease;
     pointer-events: none;
 }
 /* Transition */
-
