--- a/src/assets/icons/style.scss
+++ b/src/assets/icons/style.scss
@@ -1,18 +1,17 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('icomoon.eot?8x25wm');
-  src:  url('icomoon.eot?8x25wm#iefix') format('embedded-opentype'),
-    url('icomoon.ttf?8x25wm') format('truetype'),
-    url('icomoon.woff?8x25wm') format('woff'),
-    url('icomoon.svg?8x25wm#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("icomoon.eot?nu5tvq");
+  src: url("icomoon.eot?nu5tvq#iefix") format("embedded-opentype"), url("icomoon.ttf?nu5tvq") format("truetype"),
+    url("icomoon.woff?nu5tvq") format("woff"), url("icomoon.svg?nu5tvq#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -30,6 +29,9 @@
 }
 .icon-delete:before {
   content: "\e9ad";
+}
+.icon-plus:before {
+  content: "\ea0a";
 }
 .icon-arrow-left2:before {
   content: "\ea40";
